# PROJET_CASSANDRA

./: .gitignore  LICENSE  README.md  render.yaml  requirements.txt
4_SCHEMA/: create_schema.cql
5_ETL/: 02_clean_dataset.py  03_transform_for_cassandra.py  04_load_to_cassandra.py
6_API/: pyproject.toml  test_sdk_notebook.py
6_API/app/: database.py
6_API/app/routers/: analytics.py  customers.py  customers_cursor.py
6_API/paysim_sdk/: README.md  __init__.py  analytics.py  client.py  customers.py  dests.py  exceptions.py  stats.py  utils.py
app/: db.py  main.py
app/routers/: dests.py  dests_cursor.py  stats.py
